<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple MPG Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="tankmiles">274</string>
    <string name="enter_miles">Trip Distance:</string>
    <string name="enter_gallons">10.246</string>
    <string name="entergallons">Gallons Purchased:</string>
    <string name="enterprice">Price Per Gallon(optional):</string>
    <string name="fuelprice">3.19</string>
    <string name="reset">Reset</string>
    <string name="save">Save Results</string>
    <string name="mpgtxt">MPG=</string>
    <string name="show_price_title">Show the Fuel Price text field?</string>
    <string name="show_price_summ">Uncheck this box to hide the Fuel Price field</string>
    <string name="settings">Settings</string>
    <string name="enter_trip">Enter a Trip</string>
    <string name="past_results">Past Results</string>
    <string name="miles">Miles</string>
    <string name="gallons">Gallons</string>
    <string name="cost">Cost</string>
    <string name="price">Price</string>
    <string name="delete">     Delete All     </string>
    <string name="deleteTitle">Delete All Trips?</string>
    <string name="deleteMessage">This will permanently delete all trip entries</string>
    <string name="deleteYes">Delete</string>
    <string name="deleteNo">Cancel</string>
    <string name="cardDelete">delete</string>
    <string name="sort">Sort: </string>
    <string-array name="sort_array">
        <item>Oldest to Newest</item>
        <item>Newest to Oldest</item>
        <item>Highest MPG to Lowest</item>
        <item>Lowest MPG to Highest</item>
        <item>Highest Total Cost to Lowest</item>
        <item>Lowest Total Cost to Highest</item>
        <item>Highest Gas Price to Lowest</item>
        <item>Lowest Gas Price to Highest</item>
    </string-array>
    <string name="empty">There are no trips to display.\nClick on the Enter a Trip tab to enter one. </string>
    <string name="calculate">Calculate</string>
    <string name="about">About</string>
    <string name="about_paragraph">I\'ve created this app as an item to put on my resume. I\'m a current college student and plan to actively maintain this app for the foreseeable future.\n\nIf you have any feature requests or other suggestions for improvements, feel free to contact me directly via e-mail at jackson.wright69@gmail.com.\nThanks for installing, I hope you like it! </string>
    <string name="hide_ads">Hide Ads</string>
    <string name="ads_message">If you want to get rid of ads and support me, the developer, make the 99 cent in app purchase below!</string>
    <string name="purchase">Begin Order</string>
    <string name="purchase_successful">You have successfully paid to hide ads! If you still see ads, please restart the application. If that doesn\'t work, please e-mail me right away at jackson.wright69@gmail.com so I can fix it! Thank you for supporting me!</string>
    <string name="base64PublicKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAqgpj4Y6Aq2N3nuXTaEeFht/vow67vkeM1hV8mLjnt3BpVgM5ZgV3aotJoJhSfOgXO1hiNq1s++ZBs1God2bySYCxpn6JTlqxMMtuAJPDOoBE2xzf1gxok/21RZNDAmzB9WeSeh2NgHhXHTMoIFxQJL4YhtkyD5TtLfE63UJ30iI7Qy/zQZFunXTS2IF34RWW07IXtptTOSvLj6YwCThb9GvNp2DMTYRq/YDRPNSykNu2D6tzEgau9XH1G3lcB7px7bmHrzOXLkxRoJ2sTdlqmXAxuqEUsZStZijF515HOdB4CAe86HgFOvHkePxrxDeTCFZDDs+Pno1f/UFJ75jAdQIDAQAB</string>
    <string name="SKU_ADS">hide_ads</string>

</resources>
