<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/enter_mileage_frag"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    
	    <EditText 
	        android:id="@+id/tankmiles"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="14dp"
	        android:layout_marginLeft="5dp"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="50dp"
	        android:layout_marginTop="30dp"
	        android:hint="@string/tankmiles"
	        android:focusable="true"
    		android:focusableInTouchMode="true"
    		android:inputType="numberDecimal"/>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="7pt"
	        android:layout_toLeftOf="@id/tankmiles"
	        android:layout_alignBaseline="@id/tankmiles"
	        android:text="@string/enter_miles" />
	    
	   	<EditText 
	        android:id="@+id/gallons"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="14dp"
	        android:layout_marginLeft="5dp"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="50dp"
	        android:layout_marginTop="15dp"
	        android:hint="@string/gallons"
	        android:focusable="true"
	        android:layout_below="@id/tankmiles"
    		android:focusableInTouchMode="true"
    		android:inputType="numberDecimal" />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="7pt"
	        android:layout_toLeftOf="@id/gallons"
	        android:layout_alignBaseline="@id/gallons"
	        android:text="@string/entergallons" />
	    
	    <EditText 
	        android:id="@+id/fuelprice"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="14dp"
	        android:layout_marginLeft="5dp"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="50dp"
	        android:layout_marginTop="15dp"
	        android:hint="@string/fuelprice"
	        android:focusable="true"
	        android:layout_below="@id/gallons"
    		android:focusableInTouchMode="true"
    		android:inputType="numberDecimal" />
	    <TextView 
	        android:id="@+id/fuelpricetext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="7pt"
	        android:layout_toLeftOf="@id/fuelprice"
	        android:layout_alignBaseline="@id/fuelprice"
	        android:text="@string/enterprice" />
	    
	    
	   <TextView 
	        android:id="@+id/mpg"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="15pt"
	        android:textColor="#059400"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@id/fuelprice"
	        android:layout_marginTop="25dp"
	        />
	    <TextView 
	        android:id="@+id/mpgtext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12pt"
	        android:layout_marginRight="5dp"
			android:layout_toLeftOf="@id/mpg"
			android:layout_alignBottom="@id/mpg"
	        android:layout_below="@id/fuelprice"
	        android:layout_marginTop="31dp"
	        android:text="@string/mpg"
	        />
	    
		<Button 
		    android:id="@+id/reset"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/reset"
			android:paddingLeft="35dp"
			android:paddingRight="35dp"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="40dp"
			android:layout_marginBottom="20dp"
		    />    
		    
		<Button 
		    android:id="@+id/saveResults"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/save"
			android:paddingLeft="25dp"
			android:paddingRight="25dp"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:layout_marginRight="20dp"
			android:layout_marginBottom="20dp"
		    />  
	    
</RelativeLayout>
